--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <script src="javascript.js"></script>
@@ -14,10 +15,31 @@
 </head>
 
 <body>
+
+    <div class="wrapper" id="avisPopUp">
+        <div class="construction">
+            <p>Website under construction!</p>
+            <span class="close" id="closePopUp">
+            <i class="fa fa-times"></i>
+          </span>
+        </div>
+    </div>
+
+    <script>
+        window.console = window.console || function(t) {};
+    </script>
+
+
+
+    <script>
+        if (document.location.search.match(/type=embed/gi)) {
+            window.parent.postMessage("resize", "*");
+        }
+    </script>
     <!-- ///////////////////// -->
     <nav class="navbar navbar-expand-lg navbar-dark theam">
 
-        <img src="img/logo_-_Copy-removebg-preview.png" height="150px" width="150px" /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img src="img/logo_-_Copy-removebg-preview.png" height="150px" width="150px" /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <h1 class="text-center"> ABHDEEP MUSIC</h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -89,10 +111,10 @@
                 <div class="col-12 py-3 text-center">
                     <img src="img/logo-removebg-preview.png" height="200px" width="200px">
                     <h1 class="text-center text-white"><b>ABHDEEP MUSIC</b></h1>
-                    <h2 class="text-white font-weight-light pb-3">Hi, we are Bombay Plywood also known as Bombay Trading Company . Nice to meet you!!!. </h2>
-                    <p class="text-white">Since beginning our journey in 1950, we are the trusted name in Deoria and near by cities and now it almost 70+ years and till now we are providing the best quality hardware, Doors, Plywood and Mica in the whole Market. We provide
-                        all ranges of Utility Hardware, Door, Plywood and other Stuffs at mininum Cost. We are here to build the trust and to provide you best quality material. We Looking forward to work with You and Serve you.
-
+                    <h2 class="text-white font-weight-light pb-3">Hi, Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!</h2>
+                    <p class="text-white">
+                        Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!Website under construction!Website
+                        under construction!
                     </p>
                 </div>
 
@@ -306,7 +328,21 @@ https://www.youtube.com/channel/UCQM5ye1xR4vJgtga0ryud2Q/
 
 
 
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script id="rendered-js">
+        //Starts animation
+        $(document).ready(function() {
+            $("#avisPopUp").slideUp(0).delay(2500).fadeIn(1500);
+        });
+
+        //Close PopUp
+        $("#closePopUp").click(function() {
+            $("#avisPopUp").fadeOut(700);
+        });
+        //# sourceURL=pen.js
+    </script>
     <!-- GetButton.io widget -->
     <script type=" text/javascript ">
         (function() {
@@ -333,6 +369,9 @@ https://www.youtube.com/channel/UCQM5ye1xR4vJgtga0ryud2Q/
         })();
     </script>
 
+
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
     <!-- /GetButton.io widget -->
     <!-- Optional JavaScript -->
